--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Default suite</th></tr><tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">1,592</td><td></td><td></td></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">HybridFramework.suites.Jobserve</td><td><a href="#m0">JobserveTest</a></td><td rowspan="1">1557256880114</td><td rowspan="1">12</td></tr></tbody></table><h2>Default test</h2><h3 id="m0">HybridFramework.suites.Jobserve#JobserveTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Username=example@mail.com, ExpectedResult=LoginFailure, Password=Pass123, Runmode=Y, Browser=Chrome}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: Runmode is set to: N
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Suite A</th></tr><tr><td><a href="#t0">Login Test</a></td><td class="num">0</td><td class="num attn">3</td><td class="num">0</td><td class="num">896</td><td></td><td></td></tr><tr class="stripe"><td><a href="#t1">TestB</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">131</td><td></td><td></td></tr><tr><td><a href="#t2">Jobserve</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">68</td><td></td><td></td></tr><tr><th colspan="7">My suite</th></tr><tr><th>Total</th><th class="num">0</th><th class="num attn">4</th><th class="num attn">1</th><th class="num">1,095</th><th colspan="2"></th></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite A</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="3">HybridFramework.suites.LoginTest</td><td><a href="#m0">loginTest</a></td><td rowspan="3">1557274824520</td><td rowspan="3">1</td></tr><tr class="skippedeven"><td><a href="#m1">loginTest</a></td></tr><tr class="skippedeven"><td><a href="#m2">loginTest</a></td></tr></tbody><tbody id="t1"><tr><th colspan="4">TestB &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">HybridFramework.suites.TestB</td><td><a href="#m3">testB</a></td><td rowspan="1">1557274824622</td><td rowspan="1">55</td></tr></tbody><tbody id="t2"><tr><th colspan="4">Jobserve &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">HybridFramework.suites.Jobserve</td><td><a href="#m4">JobserveTest</a></td><td rowspan="1">1557274824754</td><td rowspan="1">0</td></tr></tbody><tbody><tr><th colspan="4">My suite</th></tr></tbody></table><h2>Login Test</h2><h3 id="m0">HybridFramework.suites.LoginTest#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Username=U3, ExpectedResult=LoginFailure, Password=P3, Runmode=N, Browser=Edge}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: Runmode is set to: N
+	at HybridFramework.suites.LoginTest.loginTest(LoginTest.java:24)
+... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m1">HybridFramework.suites.LoginTest#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Username=example@mail.com, ExpectedResult=LoginFailure, Password=Pass123, Runmode=N, Browser=Chrome}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: Runmode is set to: N
+	at HybridFramework.suites.LoginTest.loginTest(LoginTest.java:24)
+... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m2">HybridFramework.suites.LoginTest#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Username=example@mail.com, ExpectedResult=LoginSuccess, Password=Pass123, Runmode=N, Browser=Mozilla}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: Runmode is set to: N
+	at HybridFramework.suites.LoginTest.loginTest(LoginTest.java:24)
+... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h2>TestB</h2><h3 id="m3">HybridFramework.suites.TestB#testB</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Username=fdsfsd, ExpectedResult=fsd, Password=fsdfsd, Runmode=Y, Browser=Mozilla}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.reflect.InvocationTargetException
+	at HybridFramework.drivers.DriverScript.executeKeywords(DriverScript.java:54)
+	at HybridFramework.suites.TestB.testB(TestB.java:25)
+Caused by: java.lang.NoClassDefFoundError: kotlin/TypeCastException
+	at okhttp3.ResponseBody.create(ResponseBody.java:209)
+	at okhttp3.internal.Util.&lt;clinit&gt;(Util.java:51)
+	at okhttp3.ConnectionPool.&lt;clinit&gt;(ConnectionPool.java:52)
+	at org.openqa.selenium.remote.internal.OkHttpClient$Factory.&lt;init&gt;(OkHttpClient.java:118)
+	at org.openqa.selenium.remote.internal.OkHttpClient$Factory.&lt;init&gt;(OkHttpClient.java:123)
+	at org.openqa.selenium.remote.http.HttpClient$Factory.createDefault(HttpClient.java:59)
+	at org.openqa.selenium.remote.HttpCommandExecutor.&lt;clinit&gt;(HttpCommandExecutor.java:47)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:181)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:168)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
+	at HybridFramework.keywords.GenericKeywords.openBrowser(GenericKeywords.java:60)
+	... 30 more
+Caused by: java.lang.ClassNotFoundException: kotlin.TypeCastException
+	at java.base/jdk.internal.loader.BuiltinClassLoader.loadClass(BuiltinClassLoader.java:583)
+	at java.base/jdk.internal.loader.ClassLoaders$AppClassLoader.loadClass(ClassLoaders.java:178)
+	at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:521)
+	... 41 more
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h2>Jobserve</h2><h3 id="m4">HybridFramework.suites.Jobserve#JobserveTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Username=example@mail.com, Runmode=N, Browser=Chrome}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: Runmode is set to: N
 	at HybridFramework.suites.Jobserve.JobserveTest(Jobserve.java:22)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:85)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:639)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:821)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1131)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:124)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:108)
-	at org.testng.TestRunner.privateRun(TestRunner.java:773)
-	at org.testng.TestRunner.run(TestRunner.java:623)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:357)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:352)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:310)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:259)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1185)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1110)
-	at org.testng.TestNG.run(TestNG.java:1018)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
+... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
