--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79f379">  <td>19/05/07 20:21:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.Jobserve@4883b407]">&gt;&gt;init</td> 
+<tr bgcolor="79f379">  <td>19/05/08 00:59:29</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.TestB@4883b407]">&gt;&gt;init</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
-<tr bgcolor="79f379">  <td>19/05/07 20:21:19</td>   <td>1036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.Jobserve@4883b407]">&gt;&gt;initTest</td> 
+<tr bgcolor="79f379">  <td>19/05/08 00:59:29</td>   <td>479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.TestB@4883b407]">&gt;&gt;initTest</td> 
 <td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>19/05/07 20:21:20</td>   <td>1210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Jobserve.JobserveTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.Jobserve@4883b407]">JobserveTest</td> 
+<tr bgcolor="c87b81">  <td>19/05/08 00:59:29</td>   <td>585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestB.testB(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.TestB@4883b407]">testB</td> 
   <td>main@1273765644</td>   <td></td> </tr>
-<tr bgcolor="79f379">  <td>19/05/07 20:21:20</td>   <td>1223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.Jobserve@4883b407]">&lt;&lt;quit</td> 
+<tr bgcolor="79f379">  <td>19/05/08 00:59:38</td>   <td>9474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.TestB@4883b407]">&lt;&lt;quit</td> 
 <td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
 </table>
