--- a/test-output/old/Suite A/methods-alphabetical.html
+++ b/test-output/old/Suite A/methods-alphabetical.html
@@ -1,46 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite A</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd76b7">  <td>18/09/09 02:02:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Jobserve.JobserveTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suitea.Jobserve@618b19ad]">JobserveTest</td> 
-  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:26</td>   <td>-2376</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:28</td>   <td>-435</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suitea.TestB@397fbdb]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:28</td>   <td>-106</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suitea.Jobserve@618b19ad]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:27</td>   <td>-1425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:27</td>   <td>-665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:27</td>   <td>-568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:28</td>   <td>-314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suitea.TestB@397fbdb]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:28</td>   <td>-216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suitea.TestB@397fbdb]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suitea.Jobserve@618b19ad]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="85dc6f">  <td>18/09/09 02:02:27</td>   <td>-1230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">loginTest</td> 
-  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="85dc6f">  <td>18/09/09 02:02:27</td>   <td>-665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">loginTest</td> 
-  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="85dc6f">  <td>18/09/09 02:02:27</td>   <td>-568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">loginTest</td> 
-  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:27</td>   <td>-1222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:27</td>   <td>-663</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:27</td>   <td>-567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suitea.LoginTest@7d8995e]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:28</td>   <td>-312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suitea.TestB@397fbdb]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:28</td>   <td>-214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suitea.TestB@397fbdb]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="b1f06e">  <td>18/09/09 02:02:55</td>   <td>26873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suitea.Jobserve@618b19ad]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="d477ed">  <td>18/09/09 02:02:28</td>   <td>-314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestB.testB(java.util.Hashtable)[pri:0, instance:HybridFramework.suitea.TestB@397fbdb]">testB</td> 
-  <td>main@391914049</td>   <td></td> </tr>
-<tr bgcolor="d477ed">  <td>18/09/09 02:02:28</td>   <td>-216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestB.testB(java.util.Hashtable)[pri:0, instance:HybridFramework.suitea.TestB@397fbdb]">testB</td> 
-  <td>main@391914049</td>   <td></td> </tr>
+<tr bgcolor="657ecf">  <td>19/05/08 01:20:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Jobserve.JobserveTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.Jobserve@6973b51b]">JobserveTest</td> 
+  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:23</td>   <td>-1085</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-174</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.TestB@393671df]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-37</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.Jobserve@6973b51b]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.TestB@393671df]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.Jobserve@6973b51b]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="7362d6">  <td>19/05/08 01:20:24</td>   <td>-496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">loginTest</td> 
+  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="7362d6">  <td>19/05/08 01:20:24</td>   <td>-278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">loginTest</td> 
+  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="7362d6">  <td>19/05/08 01:20:24</td>   <td>-234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">loginTest</td> 
+  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-77</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.TestB@393671df]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.Jobserve@6973b51b]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="74e963">  <td>19/05/08 01:20:24</td>   <td>-132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestB.testB(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.TestB@393671df]">testB</td> 
+  <td>main@1636182655</td>   <td></td> </tr>
 </table>
