--- a/test-output/old/Suite A/methods-alphabetical.html
+++ b/test-output/old/Suite A/methods-alphabetical.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite A</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="657ecf">  <td>19/05/08 01:20:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Jobserve.JobserveTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.Jobserve@6973b51b]">JobserveTest</td> 
-  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:23</td>   <td>-1085</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-174</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.TestB@393671df]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-37</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.Jobserve@6973b51b]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.TestB@393671df]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.Jobserve@6973b51b]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="7362d6">  <td>19/05/08 01:20:24</td>   <td>-496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">loginTest</td> 
-  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="7362d6">  <td>19/05/08 01:20:24</td>   <td>-278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">loginTest</td> 
-  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="7362d6">  <td>19/05/08 01:20:24</td>   <td>-234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">loginTest</td> 
-  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@30ee2816]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>-77</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.TestB@393671df]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>19/05/08 01:20:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.Jobserve@6973b51b]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1636182655</td>   <td></td> </tr>
-<tr bgcolor="74e963">  <td>19/05/08 01:20:24</td>   <td>-132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestB.testB(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.TestB@393671df]">testB</td> 
-  <td>main@1636182655</td>   <td></td> </tr>
+<tr bgcolor="a5c39e">  <td>19/05/08 16:58:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Jobserve.JobserveTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.Jobserve@3f49dace]">JobserveTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:25</td>   <td>-8433</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:26</td>   <td>-7599</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.TestB@7085bdee]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:34</td>   <td>-34</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:HybridFramework.suites.Jobserve@3f49dace]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:26</td>   <td>-8037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:26</td>   <td>-7686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:26</td>   <td>-7649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:26</td>   <td>-7559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.TestB@7085bdee]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:HybridFramework.suites.Jobserve@3f49dace]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/05/08 16:58:26</td>   <td>-7930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">loginTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/05/08 16:58:26</td>   <td>-7686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">loginTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/05/08 16:58:26</td>   <td>-7649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">loginTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:26</td>   <td>-7916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:26</td>   <td>-7684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:26</td>   <td>-7647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.LoginTest@6093dd95]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:34</td>   <td>-95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.TestB@7085bdee]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>19/05/08 16:58:34</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:HybridFramework.suites.Jobserve@3f49dace]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9ad2d6">  <td>19/05/08 16:58:26</td>   <td>-7559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestB.testB(java.util.Hashtable)[pri:0, instance:HybridFramework.suites.TestB@7085bdee]">testB</td> 
+  <td>main@280884709</td>   <td></td> </tr>
 </table>
