--- a/test-output/old/Suite A/toc.html
+++ b/test-output/old/Suite A/toc.html
@@ -20,14 +20,6 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>TestB (0/1/0)</td><td valign='top' align='right'>
-  <a href='TestB.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
 <table width='100%' class='test-skipped'>
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Jobserve (0/0/1)</td><td valign='top' align='right'>
@@ -40,6 +32,14 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Login Test (0/0/3)</td><td valign='top' align='right'>
   <a href='Login Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TestB (1/0/0)</td><td valign='top' align='right'>
+  <a href='TestB.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
